--- a/views/chat.pug
+++ b/views/chat.pug
@@ -3,7 +3,7 @@ extends layout.pug
 block content
     .chat
         .header
-            h2 Chat 
+            h2 Chat-Prueba
             h3#numUsers
         .main 
             ul#mensajes 
